--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.1",
-    "yargs": "^3.19.0"
+    "yargs": "^3.19.0",
+    "flux": "^2.0.0",
+    "lodash": "^0.9.2"
   }
 }
