--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-mqpacker": "^3.1.0",
     "csswring": "^3.0.5",
     "dot-object": "^1.1.0",
+    "flux": "^2.0.0",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-clean": "^0.3.1",
@@ -31,15 +32,15 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.3.0",
     "gulp-util": "^3.0.6",
+    "jquery": "^2.1.4",
     "jshint-stylish": "^2.0.1",
+    "lodash": "^0.9.2",
     "react": "^0.13.3",
     "recursive-readdir-sync": "^1.0.6",
     "through": "^2.3.8",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.1",
-    "yargs": "^3.19.0",
-    "flux": "^2.0.0",
-    "lodash": "^0.9.2"
+    "yargs": "^3.19.0"
   }
 }
