--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^0.13.3",
     "recursive-readdir-sync": "^1.0.6",
     "through": "^2.3.8",
+    "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.1",
