feat(stopwatch): just fine! 💪

--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "jquery": "^2.1.4",
     "jshint-stylish": "^2.0.1",
     "lodash": "^0.9.2",
+    "moment": "^2.10.6",
     "react": "^0.13.3",
     "recursive-readdir-sync": "^1.0.6",
     "through": "^2.3.8",
+    "timer-stopwatch": "^0.1.6",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
