--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "main": "",
-  "scripts": {
-
-  },
+  "scripts": {},
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -33,6 +31,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.3.0",
     "gulp-util": "^3.0.6",
+    "immutable": "^3.7.5",
     "jquery": "^2.1.4",
     "jshint-stylish": "^2.0.1",
     "lodash": "^0.9.2",
