--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "moment": "^2.10.6",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
+    "react-sound": "^0.2.1",
     "recursive-readdir-sync": "^1.0.6",
     "rx": "^4.0.6",
+    "soundmanager2": "^2.97.20150601",
     "through": "^2.3.8",
     "timer-stopwatch": "^0.1.6",
     "underscore": "^1.8.3",
