--- a/package.json
+++ b/package.json
@@ -1,49 +1,35 @@
 {
   "name": "react-flux-puzzle",
-  "version": "0.0.0",
-  "description": "",
-  "main": "",
+  "version": "0.0.1",
+  "description": "A puzzle game built with React + Rx.js + Immutable.js",
   "scripts": {},
-  "author": "",
+  "author": "Weslley Araujo <weslleyaraujo20@gmail.com>",
   "license": "MIT",
+  "keywords": [
+    "React",
+    "Immutable",
+    "Rx"
+  ],
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "optional": "es7"
+        }
+      ]
+    ]
+  },
   "devDependencies": {
-    "autoprefixer": "^5.2.0",
-    "babel-eslint": "^4.1.1",
-    "browser-sync": "^2.8.2",
     "classnames": "^2.1.5",
-    "css-mqpacker": "^3.1.0",
-    "csswring": "^3.0.5",
-    "dot-object": "^1.1.0",
-    "gulp": "^3.9.0",
-    "gulp-cached": "^1.1.0",
-    "gulp-clean": "^0.3.1",
-    "gulp-ejs": "^1.1.1",
-    "gulp-eslint": "^1.0.0",
-    "gulp-htmlmin": "^1.1.4",
-    "gulp-jshint": "^1.11.2",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-multiple-loader": "0.1.5",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-postcss": "^5.1.10",
-    "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.3.0",
-    "gulp-util": "^3.0.6",
     "immutable": "^3.7.5",
     "jquery": "^2.1.4",
-    "jshint-stylish": "^2.0.1",
     "lodash": "^0.9.2",
     "moment": "^2.10.6",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "recursive-readdir-sync": "^1.0.6",
     "rx": "^4.0.6",
-    "through": "^2.3.8",
     "timer-stopwatch": "^0.1.6",
     "underscore": "^1.8.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "yargs": "^3.19.0"
   }
 }
