--- a/package.json
+++ b/package.json
@@ -10,18 +10,13 @@
     "Immutable",
     "Rx"
   ],
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "optional": "es7"
-        }
-      ]
-    ]
-  },
   "devDependencies": {
+    "babel": "^6.0.15",
+    "babel-core": "^6.0.20",
+    "babel-preset-es2015": "^6.0.15",
+    "babelify": "^7.2.0",
     "classnames": "^2.1.5",
+    "gulp-uglify": "^1.4.2",
     "immutable": "^3.7.5",
     "jquery": "^2.1.4",
     "lodash": "^0.9.2",
@@ -31,5 +26,8 @@
     "rx": "^4.0.6",
     "timer-stopwatch": "^0.1.6",
     "underscore": "^1.8.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.0"
   }
 }
