--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react-flux-puzzle",
   "version": "0.0.1",
   "description": "A puzzle game built with React + Rx.js + Immutable.js",
-  "scripts": {},
+  "scripts": {
+    "watch": "./node_modules/watchify/bin/cmd.js src/assets/js/index.js -o dist/assets/js/index.js -v"
+  },
   "author": "Weslley Araujo <weslleyaraujo20@gmail.com>",
   "license": "MIT",
   "keywords": [
@@ -10,13 +12,18 @@
     "Immutable",
     "Rx"
   ],
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "optional": "es7"
+        }
+      ]
+    ]
+  },
   "devDependencies": {
-    "babel": "^6.0.15",
-    "babel-core": "^6.0.20",
-    "babel-preset-es2015": "^6.0.15",
-    "babelify": "^7.2.0",
     "classnames": "^2.1.5",
-    "gulp-uglify": "^1.4.2",
     "immutable": "^3.7.5",
     "jquery": "^2.1.4",
     "lodash": "^0.9.2",
@@ -26,8 +33,8 @@
     "rx": "^4.0.6",
     "timer-stopwatch": "^0.1.6",
     "underscore": "^1.8.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.0"
+    "babelify": "^6.3.0",
+    "browserify": "^11.1.0",
+    "watchify": "^3.4.0"
   }
 }
