--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "watch:js": "watchify src/assets/js/index.js -o dist/assets/js/index.js -v",
     "postcss": "postcss -c .postcss.json",
     "start": "npm run watch:css & npm run watch:js & npm run server",
-    "build": "npm run build:js && npm run build:css && npm run postcss"
+    "build": "npm run build:js && npm run build:css && npm run postcss",
+    "deploy": "npm run build && ./pre-deploy.sh && ./deploy.sh -e"
   },
   "author": "Weslley Araujo <weslleyaraujo19@gmail.com>",
   "license": "MIT",
@@ -41,6 +42,7 @@
     "postcss-cli": "^2.3.2",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
+    "replace": "^0.3.0",
     "rx": "^4.0.6",
     "timer-stopwatch": "^0.1.6",
     "uglify-js": "^2.5.0",
