--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A puzzle game built with React + Rx.js + Immutable.js",
   "scripts": {
+    "test": "NODE_ENV=test mocha --compilers js:babel-core/register --recursive",
     "build:css": "node-sass --output-style compressed src/assets/sass/main.sass > dist/assets/css/main.css",
     "build:js": "browserify src/assets/js/index.js | uglifyjs > dist/assets/js/index.js",
     "server": "./node_modules/node-static/bin/cli.js -p 3000 .",
@@ -32,10 +33,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
+    "babel-core": "^6.1.2",
+    "babel-preset-es2015": "^6.1.2",
     "babelify": "^6.3.0",
     "browserify": "^11.1.0",
+    "chai": "^3.4.0",
     "classnames": "^2.1.5",
     "immutable": "^3.7.5",
+    "mocha": "^2.3.3",
     "moment": "^2.10.6",
     "node-sass": "^3.4.1",
     "node-static": "^0.7.7",
