--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^0.14.0",
     "replace": "^0.3.0",
     "rx": "^4.0.6",
+    "sinon": "^1.17.2",
     "timer-stopwatch": "^0.1.6",
     "uglify-js": "^2.5.0",
     "underscore": "^1.8.3",
