--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "node-static": "^0.7.7",
     "postcss-cli": "^2.3.2",
     "react": "^0.14.0",
+    "react-addons": "^0.9.0",
     "react-dom": "^0.14.0",
     "replace": "^0.3.0",
     "rx": "^4.0.6",
