feature(specs): Setting up structure to test components
Finnaly improved how to test components at the project

--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "node-static": "^0.7.7",
     "postcss-cli": "^2.3.2",
     "react": "^0.14.0",
-    "react-addons": "^0.9.0",
+    "react-addons-test-utils": "^0.14.2",
     "react-dom": "^0.14.0",
     "replace": "^0.3.0",
     "rx": "^4.0.6",
     "sinon": "^1.17.2",
+    "skin-deep": "^0.12.0",
     "timer-stopwatch": "^0.1.6",
     "uglify-js": "^2.5.0",
     "underscore": "^1.8.3",
