--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A puzzle game built with React + Rx.js + Immutable.js",
   "scripts": {
     "test": "NODE_ENV=test mocha --compilers js:babel-core/register --recursive",
-    "test:cov": "NODE_ENV=test istanbul cover _mocha -- --require babel-core/register --recursive",
+    "test:coverage": "node_modules/.bin/babel-node node_modules/.bin/babel-istanbul cover node_modules/.bin/_mocha -- --recursive",
     "build:css": "node-sass --output-style compressed src/assets/sass/main.sass > dist/assets/css/main.css",
     "build:js": "browserify src/assets/js/index.js -t [ babelify ] | uglifyjs > dist/assets/js/index.js",
     "server": "./node_modules/node-static/bin/cli.js -p 3000 .",
@@ -30,7 +30,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
+    "babel-cli": "^6.1.18",
     "babel-core": "^6.1.2",
+    "babel-istanbul": "^0.5.8",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.4",
     "babel-preset-stage-0": "^6.1.2",
@@ -39,7 +41,6 @@
     "chai": "^3.4.0",
     "classnames": "^2.1.5",
     "immutable": "^3.7.5",
-    "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
     "moment": "^2.10.6",
     "node-sass": "^3.4.1",
