fix(package): Adding correct packages for coveralls
Forgot to also add this little guy :laughing:

--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "browserify": "^11.1.0",
     "chai": "^3.4.0",
     "classnames": "^2.1.5",
+    "coveralls": "^2.11.4",
     "immutable": "^3.7.5",
     "mocha": "^2.3.3",
+    "mocha-lcov-reporter": "^1.0.0",
     "moment": "^2.10.6",
     "node-sass": "^3.4.1",
     "node-static": "^0.7.7",
